Brag log changes

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -285,3 +285,13 @@ main {
   padding-bottom: 10px;
   font-weight: normal;
 }
+
+.embed-giphy {
+  width: 50%;
+  margin: 0 auto;
+
+  p {
+    width: 100%;
+    text-align: center;
+  }
+}
